--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hallo World !</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit sunt animi saepe soluta provident necessitatibus quisquam deserunt illo esse ea, asperiores maxime? Id velit ducimus blanditiis ad? Omnis, ex esse!</p>
+    <header>
+        <h1>Hallo Cake World !</h1>
+    </header>
+    <main>
+        <p>Sayeda´s cake shop. She bakes super Yummy cakes.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit sunt animi saepe soluta provident necessitatibus quisquam deserunt illo esse ea, asperiores maxime? Id velit ducimus blanditiis ad? Omnis, ex esse!</p>
+    <a href="about.html">About</a>
+    </main>   
 </body>
 </html>
