image added to h1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Call A Cake!</h1>
+        <img src="image/50aa9fc5-47b9-4bf3-97f2-c0947d41353b.JPG" alt="cake picture">
     </header>
     <main>
         <p>Sayeda´s cake shop. She bakes super Yummy cakes.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit sunt animi saepe soluta provident necessitatibus quisquam deserunt illo esse ea, asperiores maxime? Id velit ducimus blanditiis ad? Omnis, ex esse!</p>
